# lgtm-db

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  lgtm.yaml  pyproject.toml  setup.cfg  setup.py  shields.json
.github/workflows/: autogenerate_gallery_md.yml  badges.yml  codeql-analysis.yml  pr-validator.yml  tests.yml
docs/: gallery.md  index.html
docs/assets/: template-index.html
lgtm_db/: __init__.py  loader.py  matcher.py
lgtm_db/data/: constants.py  db.yaml  gallery.md
scripts/: generate_gallery.py  get_width_height.py
scripts/greasemonkey/: lgtm-gifs-github.user.js  lgtm-gifs-gitlab.user.js
tests/: conftest.py  test_loader.py  test_matcher.py
