[tool.black]
exclude = '''
/(
    \.git
  | _build
  | build
  | dist
  | env
  | venv
)/
'''
line-length = 110
target-version = ['py39']

[tool.pycln]
all = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 110
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 110
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pydocstyle
    "D201", "D202", "D205", "D300", "D301", "D403",
    "D410", "D411", "D413",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-errmsg
    "EM",
]
ignore = ["E501", "F403"]
force-exclude = true

[build-system]
requires = [
    "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"
