[metadata]
name = lgtm-db
version = attr: lgtm_db.__version__.__version__
description = A collection of LGTM-related gifs and images for PR approvals and merges
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thatlittleboy/lgtm-db
author = Jeremy Goh
license = MIT
license_files = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    markupsafe
    pyyaml
    importlib_resources;python_version<"3.9"

[options.entry_points]
console_scripts =
    lgtm-db = lgtm_db:main

[options.extras_require]
dev =
    beautifulsoup4
    requests
    Pillow
    asyncio
    aiohttp
    pytest

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
